--- a/app/src/main/res/layout-xlarge-land/teleop_fragment.xml
+++ b/app/src/main/res/layout-xlarge-land/teleop_fragment.xml
@@ -146,235 +146,13 @@
             android:layout_centerHorizontal="true"
             android:textSize="30sp"/>
 
-        <SeekBar
-            android:layout_width="400dp"
-            android:layout_height="30dp"
-            android:id="@+id/ballrateSeekBar"
-            android:max="10"
-            android:layout_centerVertical="true"
-            android:layout_centerHorizontal="true"
-            android:layout_below="@+id/amountGearsPlacedTextView"
-            android:layout_marginTop="15dp"/>
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceSmall"
-            android:text="Ball Rate"
-            android:id="@+id/ballrateTextView"
-            android:layout_centerVertical="true"
-            android:layout_centerHorizontal="true"
-            android:layout_below="@+id/ballrateSeekBar"
-            android:textSize="30sp"
-            android:layout_marginTop="0dp"/>
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceSmall"
-            android:text="0"
-            android:id="@+id/zerorateTextView"
-            android:layout_marginTop="0dp"
-            android:layout_below="@+id/ballrateSeekBar"
-            android:layout_toLeftOf="@+id/ballrateSeekBar"
-            android:layout_toStartOf="@+id/ballrateSeekBar"
-            android:textSize="30sp"/>
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceSmall"
-            android:text="10"
-            android:id="@+id/tenrateTextView"
-            android:layout_below="@+id/ballrateSeekBar"
-            android:layout_toRightOf="@+id/ballrateSeekBar"
-            android:layout_toEndOf="@+id/ballrateSeekBar"
-            android:layout_marginTop="0dp"
-            android:textSize="30sp"/>
-
-        <SeekBar
-            android:layout_width="400dp"
-            android:layout_height="30dp"
-            android:id="@+id/highballsmissedSeekBar"
-            android:max="100"
-            android:layout_marginTop="15dp"
-            android:layout_below="@+id/ballrateTextView"
-            android:layout_alignRight="@id/ballrateSeekBar"/>
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceSmall"
-            android:text="High Missed"
-            android:id="@+id/highmissedTextView"
-            android:layout_below="@+id/highballsmissedSeekBar"
-            android:layout_centerHorizontal="true"
-            android:layout_marginTop="0dp"
-            android:textSize="30sp" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textAppearance="?android:textAppearanceSmall"
-            android:text="0"
-            android:id="@+id/zeromissedTextView"
-            android:layout_below="@+id/highballsmissedSeekBar"
-            android:layout_toLeftOf="@+id/highballsmissedSeekBar"
-            android:layout_toStartOf="@+id/highballsmissedSeekBar"
-            android:layout_marginTop="0dp"
-            android:textSize="30sp" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textAppearance="?android:textAppearanceSmall"
-            android:text="100"
-            android:id="@+id/onehundredmissedTextView"
-            android:layout_below="@+id/highballsmissedSeekBar"
-            android:layout_toRightOf="@+id/highballsmissedSeekBar"
-            android:layout_toEndOf="@+id/highballsmissedSeekBar"
-            android:layout_marginTop="0dp"
-            android:textSize="30sp" />
-
-        <SeekBar
-            android:layout_width="400dp"
-            android:layout_height="30dp"
-            android:id="@+id/lowballrateSeekBar"
-            android:layout_below="@+id/highmissedTextView"
-            android:layout_centerHorizontal="true"
-            android:max="10"
-            android:layout_marginTop="15dp"/>
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceSmall"
-            android:text="Low Ball Rate"
-            android:id="@+id/lowballTextView"
-            android:layout_below="@+id/lowballrateSeekBar"
-            android:layout_centerHorizontal="true"
-            android:layout_marginTop="0dp"
-            android:textSize="30sp"/>
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceSmall"
-            android:text="0"
-            android:id="@+id/lowzerorateTextView"
-            android:layout_marginTop="0dp"
-            android:layout_below="@+id/lowballrateSeekBar"
-            android:layout_toLeftOf="@+id/lowballrateSeekBar"
-            android:layout_toStartOf="@+id/lowballrateSeekBar"
-            android:textSize="30sp"/>
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceSmall"
-            android:text="10"
-            android:id="@+id/lowtenrateTextView"
-            android:textSize="30sp"
-            android:layout_marginTop="0dp"
-            android:layout_below="@+id/lowballrateSeekBar"
-            android:layout_toRightOf="@+id/lowballrateSeekBar"
-            android:layout_toEndOf="@+id/lowballrateSeekBar" />
-
-        <SeekBar
-            android:layout_width="400dp"
-            android:layout_height="30dp"
-            android:id="@+id/lowballmissedSeekBar"
-            android:max="100"
-            android:layout_below="@+id/lowballTextView"
-            android:layout_alignRight="@+id/lowballrateSeekBar"
-            android:layout_marginTop="15dp" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceSmall"
-            android:text="0"
-            android:id="@+id/zerolowmissedTextView"
-            android:layout_below="@+id/lowballmissedSeekBar"
-            android:layout_toLeftOf="@+id/lowballmissedSeekBar"
-            android:layout_toStartOf="@+id/lowballmissedSeekBar"
-            android:layout_marginTop="0dp"
-            android:textSize="30sp"/>
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceSmall"
-            android:text="Low Missed"
-            android:id="@+id/lowballmissedTextView"
-            android:layout_below="@+id/lowballmissedSeekBar"
-            android:layout_centerHorizontal="true"
-            android:layout_marginTop="0dp"
-            android:textSize="30sp"/>
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceSmall"
-            android:text="100"
-            android:id="@+id/onehundredlowmissedTextView"
-            android:layout_below="@+id/lowballmissedSeekBar"
-            android:layout_toRightOf="@id/lowballmissedSeekBar"
-            android:layout_toEndOf="@+id/lowballmissedSeekBar"
-            android:layout_marginTop="0dp"
-            android:textSize="30sp" />
-
-        <SeekBar
-            android:layout_width="400dp"
-            android:layout_height="30dp"
-            android:id="@+id/hopperintakeSeekBar"
-            android:max="100"
-            android:layout_below="@+id/lowballmissedTextView"
-            android:layout_alignRight="@+id/lowballmissedSeekBar"
-            android:layout_marginTop="15dp" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceSmall"
-            android:text="0"
-            android:id="@+id/zerointakenTextView"
-            android:layout_below="@+id/hopperintakeSeekBar"
-            android:layout_toLeftOf="@+id/hopperintakeSeekBar"
-            android:layout_toStartOf="@+id/hopperintakeSeekBar"
-            android:layout_marginTop="0dp"
-            android:textSize="30sp" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceSmall"
-            android:text="Hopper Intake"
-            android:id="@+id/hopperintakeTextView"
-            android:layout_below="@+id/hopperintakeSeekBar"
-            android:layout_centerHorizontal="true"
-            android:layout_marginTop="0dp"
-            android:textSize="30sp" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceSmall"
-            android:text="100"
-            android:id="@+id/onehundredhopperintakeTextView"
-            android:layout_below="@+id/hopperintakeSeekBar"
-            android:layout_toRightOf="@+id/hopperintakeSeekBar"
-            android:layout_toEndOf="@+id/hopperintakeSeekBar"
-            android:layout_marginTop="0dp"
-            android:textSize="30sp" />
-
         <CheckBox
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Successful Climb?"
             android:id="@+id/successfulclimbcheckBox"
             android:layout_marginTop="15dp"
-            android:layout_below="@+id/hopperintakeTextView"
+            android:layout_below="@+id/amountGearsPlacedTextView"
             android:layout_centerHorizontal="true"
             android:textSize="30sp"/>
 
@@ -386,8 +164,8 @@
             android:text="00"
             android:layout_marginTop="15dp"
             android:layout_alignBottom="@+id/startclimbButton"
-            android:layout_alignLeft="@+id/lowzerorateTextView"
-            android:layout_alignStart="@+id/lowzerorateTextView" />
+            android:layout_alignLeft="@+id/decreaseGearsPlacedButton"
+            android:layout_alignStart="@+id/decreaseGearsPlacedButton" />
 
         <Button
             style="?android:attr/buttonStyleSmall"
