--- a/app/src/main/res/layout/data_list.xml
+++ b/app/src/main/res/layout/data_list.xml
@@ -104,61 +104,17 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="High Shoot Speed "
-        android:id="@+id/highShootSpeedTextView"
-        android:layout_below="@+id/gearsPickedUpTextView"/>
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="High Shots Missed "
-        android:id="@+id/highShotsMissedTextView"
-        android:layout_toRightOf="@+id/highShootSpeedTextView"
-        android:layout_below="@+id/gearsPickedUpTextView"/>
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="Low Shoot Speed "
-        android:id="@+id/lowShootSpeedTextView"
-        android:layout_below="@+id/highShootSpeedTextView"/>
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="Low Shots Missed "
-        android:id="@+id/lowShotsMissedTextView"
-        android:layout_toRightOf="@+id/lowShootSpeedTextView"
-        android:layout_below="@+id/highShotsMissedTextView"/>
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="Hopper Intake "
-        android:id="@+id/hopperIntakeTextView"
-        android:layout_below="@+id/lowShootSpeedTextView"/>
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="Climb Time "
-        android:id="@+id/climbTimeTextView"
-        android:layout_below="@+id/hopperIntakeTextView"/>
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceMedium"
         android:text="Climb Success "
         android:id="@+id/climbSuccessTextView"
-        android:layout_toRightOf="@+id/climbTimeTextView"
-        android:layout_below="@+id/hopperIntakeTextView"/>
+        android:layout_below="@+id/gearsPickedUpTextView"/>
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:text="Rank "
         android:id="@+id/rankTextView"
-        android:layout_below="@+id/climbTimeTextView"/>
+        android:layout_toRightOf="@+id/climbSuccessTextView"
+        android:layout_below="@+id/gearsHungTextView"/>
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
